--- a/dicee.html
+++ b/dicee.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
+    <meta name="description" content="simple dice game">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
